frontend/src/styles/App.css
/* ... */
.checkboxContainer:hover input ~ .checkmark {
	background-color: var(--clr-green);
}

.checkboxContainer input:checked ~ .checkmark {
	background-color: var(--clr-darkgreen);
}

.checkmark:after {
	content: '';
	position: absolute;
	display: none;
}

.checkboxContainer input:checked ~ .checkmark:after {
	display: block;
}

.checkboxContainer .checkmark:after {
	left: 9px;
	top: 5px;
	width: 11px;
	height: 16px;
	border: solid var(--clr-white);
	border-width: 0 3px 3px 0;
	transform: rotate(45deg);
}

.completed {
	text-decoration: 2px solid line-through;
	text-decoration-color: var(--clr-darkgreen);
	color: var(--clr-lightgrey);
	font-size: 1em;
}

.buttonListRow {
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

.buttonEdit {
	width: 40px;
	height: 40px;
	margin-right: 10px;
	background-color: var(--clr-white);
	border-radius: 0.8rem;
	border: 2px solid var(--clr-green);
	fill: var(--clr-green);
	cursor: pointer;
}

.buttonEdit:hover {
	border: none;
	background-color: var(--clr-green);
	fill: white;
}

.buttonEditInactive {
	width: 40px;
	height: 40px;
	margin-right: 10px;
	background-color: var(--clr-white);
	border-radius: 0.8rem;
	border: 2px solid var(--clr-lightgrey);
	fill: var(--clr-lightgrey);
	pointer-events: none;
}

.buttonDelete {
	width: 40px;
	height: 40px;
	margin-right: 10px;
	cursor: pointer;
	background-color: var(--clr-white);
	border-radius: 0.8rem;
	border: 2px solid var(--clr-green);
	fill: var(--clr-green);
}

.buttonDelete:hover {
	border: none;
	background-color: var(--clr-green);
	fill: white;
}

.buttonDelete:active {
	border: none;
	background-color: var(--clr-darkgreen);
	fill: white;
}

.buttonCalendar {
	width: 40px;
	height: 40px;
	cursor: pointer;
	background-color: var(--clr-white);
	border-radius: 0.8rem;
	border: 2px solid var(--clr-green);
	fill: var(--clr-green);
}

.buttonCalendar:hover {
	border: none;
	background-color: var(--clr-green);
	fill: white;
}

.icon {
	width: 20px;
	height: 20px;
	cursor: pointer;
}

.dropdownWrapper {
	width: 20%;
	font-size: 1em;
	font-weight: 500;
	display: flex;
	align-items: center;
	min-width: 160px;
}

.dropdownContainer {
	width: 100%;
	position: relative;
	box-shadow: var(--dropdown-shadow);
}

.dropdownContainerInactive {
	width: 100%;
	position: relative;
	color: var(--clr-lightgrey);
	pointer-events: none;
}

.dropdownSelected {
	cursor: pointer;
	padding: 6px;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.dropdownOptions {
	cursor: pointer;
	border-top: 0;
	position: absolute;
	width: inherit;
	z-index: 10;
	box-shadow: var(--dropdown-shadow);
}

.dropdownOption {
	cursor: pointer;
	border-top: 0;
	padding: 10px;
}

#notimportant {
	background-color: var(--clr-white);
	color: var(--clr-lightsalmon);
	border: 2px solid var(--clr-lightsalmon);
	border-top: none;
}

#important {
	background-color: var(--clr-white);
	color: var(--clr-salmon);
	border: 2px solid var(--clr-salmon);
	border-top: none;
}

#urgent {
	background-color: var(--clr-white);
	color: var(--clr-brightsalmon);
	border: 2px solid var(--clr-brightsalmon);
	border-top: none;
}

.textSignUpContainer,
.textLoginContainer {
	margin-top: 2.5em;
	text-align: center;
	font-size: 1em;
}

.message {
	margin-top: 1.5em;
	margin-bottom: 1.5em;
	height: 10px;
}

.successMessage,
.errorMessage {
	text-align: center;
	font-size: 1.2em;
}

.errorMessage {
	color: var(--clr-brightsalmon);
}

.successMessage {
	color: var(--clr-darkgreen);
}

.todoContainer {
	width: 50%;
	background: var(--clr-white);
	border-radius: var(--radius1);
	padding: 5rem;
	box-shadow: var(--dark-shadow);
}

.loaderContainer {
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 100vh;
	background: var(--clr-salmon);
}

.loader {
	position: relative;
	width: 80px;
	height: 80px;
	animation: rotate 2s linear infinite;
}

.loaderCircle {
	width: 50%;
	height: 50%;
	fill: none;
	stroke-width: 8;
	stroke: #ffffff;
	stroke-linecap: round;
	transform: translate(5px, 5px);
	stroke-dasharray: 220;
	stroke-dashoffset: 220;
	animation: animate 4s linear infinite;
}

@keyframes rotate {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

@keyframes animate {
	0%,
	100% {
		stroke-dashoffset: 220;
	}
	50% {
		stroke-dashoffset: 0;
	}
	50.1% {
		stroke-dashoffset: 440;
	}
}

@media (max-width: 991.98px) {
	main {
		padding: 25px;
	}

	.container {
		max-width: 100%;
		min-width: 70%;
		padding: 2.5rem;
		max-height: 120vh;
	}

	.navbarWelcomeBox {
		width: 50%;
	}

	.navbarTodoBox h3 {
		display: none;
	}

	.navbarLogOutBox {
		width: 50%;
	}

	.checkboxTitleButtons,
	.dropdownWrapper {
		width: 100%;
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
		padding-top: 10px;
	}

	.todoContainer {
		width: 60%;
		padding: 2.5rem;
	}

	h3 {
		font-size: 1.9rem;
	}

	.todoElement {
		margin: 0;
		font-size: 1em;
		width: 70%;
		align-items: flex-start;
		display: flex;
		justify-content: space-between;
		padding-top: 0;
		border-bottom: none;
		padding-bottom: 0;
		padding-right: 0;
	}

	.todoElement p {
		border-bottom: none;
		font-size: 1em;
	}

	.titleContainer {
		width: 100%;
	}

	.checkboxContainer {
		width: 10%;
	}

	.dropdownContainer {
		width: 100%;
	}

	.buttonListRow {
		flex-direction: column;
		justify-content: flex-start;
	}

	.buttonListElements {
		padding-bottom: 5px;
		cursor: pointer;
	}

	.buttonEdit,
	.buttonEditInactive,
	.buttonDelete,
	.buttonCalendar {
		margin: 0;
		width: 50px;
		height: 50px;
	}

	.editInput {
		width: 100%;
		height: 50%;
		resize: none;
		box-sizing: border-box;
	}

	.todoWrapper {
		display: block;
	}
}

